--- a/lab03/lab03.html
+++ b/lab03/lab03.html
@@ -18,7 +18,7 @@
 
         <a href="https://www.linkedin.com/in/bellarose01/" target="_blank">
         My LinkedIn Profile
-    <img src="images/photo.png">
+    <img src="lab03/photo.png">
         </a>
         <p> 
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2944.759353076761!2d-74.1300815!3d40.0964136!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c183fee37e6165%3A0xb817dd60e68dca9a!2s901%20Gardenia%20Dr%2C%20Brick%20Township%2C%20NJ%2008724!5e1!3m2!1sen!2sus!4v1757551264891!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
