--- a/lab06/lab03.html
+++ b/lab06/lab03.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Contact</title>
+        <!-- Inside the <head> of bio.html, skills.html, contact.html -->
+         <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">    
     </head>
     <body>
         <h1>Contact</h1>
