--- a/lab06/lab04.html
+++ b/lab06/lab04.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="uti-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Front End Web Development</title>
+    <!-- Inside the <head> of bio.html, skills.html, contact.html -->
+    <link rel="stylesheet" href="styles.css">
     <style>
         table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
+         font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
         }
-        td,th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-        tr:nth-child(even){
-            background-color: #dddddd;
+        td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
         }
     </style>
 </head>
@@ -34,7 +33,7 @@
             <td>Swot Analysis</td>
             <td>Master</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Coding</td>
             <td>MS Office</td>
             <td>Proficient</td>
@@ -44,7 +43,7 @@
             <td>Canva</td>
             <td>Competent</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Research</td>
             <td>Analysis</td>
             <td>Master</td>
@@ -54,7 +53,7 @@
             <td>Python</td>
             <td>Proficient</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Web Design</td>
             <td>HTML</td>
             <td>Competent</td>
@@ -64,7 +63,7 @@
             <td>Interview Skills</td>
             <td>Proficient</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Project Management</td>
             <td>Project Planning</td>
             <td>Proficient</td>
@@ -75,5 +74,6 @@
             <td>Master</td>
         </tr>
     </table>
+</body>
 
 
