--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -8,6 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="skills.html">Skills</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
         <h1>Contact</h1>
         <form action="https://formspree.io/f/xldwyzlv" method="POST">
             <fieldset>
