--- a/lab07/index.html
+++ b/lab07/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  <nav>
+  <a href="index.html">Home</a> |
+  <a href="skills.html">Skills</a> |
+  <a href="contact.html">Contact</a>
+  </nav>
   <h1>Bella Rose</h1>
 
   <h2>Personal Biography</h2>
