--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -20,6 +20,11 @@
     </style>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="skills.html">Skills</a> |
+         <a href="contact.html">Contact</a>
+    </nav>
     <h2>Bella's Skills</h2>
     <table>
         <caption>Bella's Skills and Proficiency Levels</caption>
