--- a/lab08/index.html
+++ b/lab08/index.html
@@ -15,13 +15,10 @@
   </nav>
 
   <!-- Page header/banner -->
-  <header>
-    <!-- Replace with your own banner image if you have one -->
-    <figure>
-      <img src="https://via.placeholder.com/1200x260?text=Bio+Banner" alt="Banner for Bella Rose biography">
-      <figcaption class="sr-only">Banner image for the biography page</figcaption>
-    </figure>
-  </header>
+ <header class="banner">
+  <h1>Bella Rose</h1>
+  <p>Information Management & Technology  |  Project Management  |  Marketing Minor</p>
+</header>
 
   <!-- Main page content -->
   <main>
