--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -33,7 +33,7 @@
       <section class="col card" aria-labelledby="links-heading">
         <h2 id="links-heading">Links</h2>
         <ul>
-          <li><a href="mailto:bellarose@example.com">bellarose@example.com</a></li>
+          <li><a href="mailto:brose01@syr.edu">brose01@syr.edu</a></li>
           <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a></li>
         </ul>
       </section>
