--- a/lab08/practice.html
+++ b/lab08/practice.html
@@ -39,8 +39,7 @@
 
   <h1>Float Practice</h1>
   <article>
-    <img class="float-left" src="https://via.placeholder.com/220x160?text=Float+Me" alt="Sample float image">
-    <p>
+    <img class="float-left" src="image2.jpg" alt="Decorative image floated left">
       This paragraph wraps around an image floated to the left. The margin on the image creates
       space so text does not look squished. Keep writing a few more sentences so you can see the
       wrap effect across multiple lines. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
