--- a/lab10/index.html
+++ b/lab10/index.html
@@ -7,15 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav aria-label="Primary">
-    <a href="index.html">Home</a> |
-    <a href="skills.html">Skills</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="practice.html">Practice</a>
-  </nav>
+  <nav>
+  <a href="index.html">Home</a> <span class="pipe">|</span>
+  <a href="skills.html">Skills</a> <span class="pipe">|</span>
+  <a href="contact.html">Contact</a>
+</nav>
 
   <!-- Page header/banner -->
  <header class="banner">
+  <img src="images/your-image.jpg" alt="Banner" class="fluid-img">
   <h1>Bella Rose</h1>
   <p>Information Management & Technology  |  Project Management  |  Marketing Minor</p>
 </header>
