--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -8,12 +8,11 @@
 </head>
 <body>
 
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="skills.html">Skills</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="practice.html">Practice</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a> <span class="pipe">|</span>
+  <a href="skills.html">Skills</a> <span class="pipe">|</span>
+  <a href="contact.html">Contact</a>
+</nav>
 
   <header class="banner">
     <h1>Skills</h1>
