--- a/lab10/index.html
+++ b/lab10/index.html
@@ -7,18 +7,19 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav>
-  <a href="index.html">Home</a> <span class="pipe">|</span>
-  <a href="skills.html">Skills</a> <span class="pipe">|</span>
-  <a href="contact.html">Contact</a>
-</nav>
 
-  <!-- Page header/banner -->
- <header class="banner">
-  <img src="images/your-image.jpg" alt="Banner" class="fluid-img">
-  <h1>Bella Rose</h1>
-  <p>Information Management & Technology  |  Project Management  |  Marketing Minor</p>
-</header>
+  <!-- Shared navigation -->
+  <nav>
+    <a href="index.html" aria-current="page">Home</a> <span class="pipe">|</span>
+    <a href="skills.html">Skills</a> <span class="pipe">|</span>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <!-- CSS-only hero banner (no image) -->
+  <header class="hero">
+    <h1>Bella Rose</h1>
+    <p>Information Management & Technology  |  Project Management  |  Marketing Minor</p>
+  </header>
 
   <!-- Main page content -->
   <main>
@@ -46,11 +47,12 @@
     </ul>
   </main>
 
-  <!-- Footer with float example -->
+  <!-- Footer -->
   <footer>
     <hr>
     <p class="left">&copy; 2025 Bella Rose</p>
     <p class="right">“First, solve the problem. Then, write the code.” – John Johnson</p>
   </footer>
+
 </body>
 </html>
