--- a/lab10/index.html
+++ b/lab10/index.html
@@ -15,7 +15,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <!-- CSS-only hero banner (no image) -->
+  <!-- CSS-only hero (no image) -->
   <header class="hero">
     <h1>Bella Rose</h1>
     <p>Information Management & Technology  |  Project Management  |  Marketing Minor</p>
@@ -47,11 +47,11 @@
     </ul>
   </main>
 
-  <!-- Footer -->
+  <!-- Simple footer (Option 1) -->
   <footer>
     <hr>
     <p class="left">&copy; 2025 Bella Rose</p>
-    <p class="right">“First, solve the problem. Then, write the code.” – John Johnson</p>
+    <p class="right">All Rights Reserved.</p>
   </footer>
 
 </body>
