--- a/project5/about.html
+++ b/project5/about.html
@@ -21,6 +21,11 @@
   <main id="main" role="main">
     <article aria-labelledby="about-heading">
       <h2 id="about-heading">About This Site</h2>
+      <figure>
+        <img src="images/Collegestudentcooking.jpg" alt="College student tasting food while cooking in a small kitchen">
+        <figcaption>Cooking at home can be affordable and simple for students.</figcaption>
+      </figure>
+
       <p>These recipes were chosen for affordability, minimal equipment, and flexibility. Each page lists ingredient swaps and dietary notes to help you adapt.</p>
 
       <section aria-labelledby="diet-heading">
