--- a/project5/burrito.html
+++ b/project5/burrito.html
@@ -26,8 +26,13 @@
       </header>
 
       <figure>
-        <img src="images/chicken-burrito-bowl.jpg" alt="Chicken burrito bowl with rice, beans, corn, and salsa">
-        <figcaption>Customize with your favorite toppings: salsa, corn, avocado, or cheese.</figcaption>
+        <img src="images/chickenbowl.jpg" alt="Chicken burrito bowl with rice, beans, corn, and salsa">
+        <figcaption>Customize with your favorite toppings like salsa, corn, avocado, or cheese.</figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/burritoingredients.jpg" alt="Bowls of ingredients for burrito bowls including rice, beans, and guacamole">
+        <figcaption>Prep your ingredients before assembling your bowls.</figcaption>
       </figure>
 
       <section aria-labelledby="ingredients-heading">
