--- a/project5/index.html
+++ b/project5/index.html
@@ -23,7 +23,7 @@
     <section aria-labelledby="intro-heading">
       <h2 id="intro-heading">Cook smart, save money, and eat well</h2>
       <figure>
-        <img src="images/hero.jpg" alt="A bowl with rice, beans, vegetables, and grilled chicken on a desk">
+        <img src="images/cover.jpg" alt="Fresh ingredients and vegetables on a wooden table">
         <figcaption>Recipes use shared ingredients and basic tools to fit dorm and apartment life.</figcaption>
       </figure>
       <p>This site gathers budget-friendly recipes that fit a student schedule. Each recipe includes simple steps, ingredient swaps, and tips for dietary needs.</p>
@@ -44,7 +44,7 @@
   </main>
 
   <footer>
-    <p>&copy; <time>2025</time> Bella Rose · IST 263 Project 5 (HTML only)</p>
+    <p>&copy; <time>2025</time> Bella Rose</p>
   </footer>
 </body>
 </html>
