--- a/project5/salmon.html
+++ b/project5/salmon.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -26,8 +26,13 @@
       </header>
 
       <figure>
-        <img src="images/salmon.jpg" alt="Baked salmon fillets with lemon slices and herbs on a baking sheet">
+        <img src="images/salmon.jpg" alt="Baked salmon fillet with lemon slices and asparagus on a baking sheet">
         <figcaption>Pairs well with microwave-steamed veggies and rice.</figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/lemongarlic.jpg" alt="Fresh garlic cloves and lemon slices on a kitchen counter">
+        <figcaption>Lemon and garlic give this salmon its bright, savory flavor.</figcaption>
       </figure>
 
       <section aria-labelledby="ingredients-heading">
