--- a/lab13/index.html
+++ b/lab13/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
+  <a class="skip" href="#content">Skip to Content</a>
+
   <!-- Shared navigation -->
-  <nav>
+  <nav aria-label="Main navigation">
     <a href="index.html" aria-current="page">Home</a> <span class="pipe">|</span>
     <a href="skills.html">Skills</a> <span class="pipe">|</span>
     <a href="contact.html">Contact</a>
@@ -18,11 +20,11 @@
   <!-- CSS-only hero (no image) -->
   <header class="hero">
     <h1>Bella Rose</h1>
-    <p>Information Management & Technology  |  Project Management  |  Marketing Minor</p>
+    <p>Information Management &amp; Technology | Project Management | Marketing Minor</p>
   </header>
 
   <!-- Main page content -->
-  <main>
+  <main id="content">
     <h2>Personal Biography</h2>
 
     <p><strong>Major:</strong> Information Management and Technology</p>
@@ -47,7 +49,7 @@
     </ul>
   </main>
 
-  <!-- Simple footer (Option 1) -->
+  <!-- Simple footer -->
   <footer>
     <hr>
     <p class="left">&copy; 2025 Bella Rose</p>
