--- a/project7/chicken-burrito-bowl.html
+++ b/project7/chicken-burrito-bowl.html
@@ -31,7 +31,7 @@
       </header>
 
       <figure class="recipe-figure">
-        <img src="images/chicken-burrito-bowl.jpg" alt="Chicken burrito bowl with rice, beans, corn, and toppings in a single dish">
+        <img src="images/chickenbowl.jpg" alt="Chicken burrito bowl with rice, beans, corn, and toppings in a single dish">
         <figcaption>Prep a batch of rice and chicken once, then assemble bowls throughout the week.</figcaption>
       </figure>
 
