--- a/project7/index.html
+++ b/project7/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home | Easy College Recipes</title>
   <meta name="description" content="Easy, affordable recipes for college students with simple steps and dietary modifications.">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -37,7 +41,6 @@
     <section aria-labelledby="featured-heading">
       <h2 id="featured-heading">Featured recipes</h2>
 
-      <!-- CSS Grid "learn something new" area -->
       <div class="recipes-grid" aria-label="Featured recipes">
         <article class="recipe-card" aria-labelledby="feat1-heading">
           <h3 id="feat1-heading"><a href="chicken-burrito-bowl.html">Chicken Burrito Bowl</a></h3>
